tui-components/tests/snapshots/selection_snapshots__selection_list_basic.snap
---
source: tests/selection_snapshots.rs
expression: output
---
                                                
  Select Approval Mode                          
                                                
› 1. Read Only (current)  Codex can read files  
  2. Full Access          Codex can edit files  
                                                
  Press enter to confirm or esc to go back
