tui-components/tests/snapshots/selection_snapshots__selection_list_basic_render.snap
---
source: tui-components/tests/selection_snapshots.rs
assertion_line: 239
expression: output
---
                                                
  Select Approval Mode                          
                                                
› 1. Read Only (current)  Codex can read files  
  2. Full Access          Codex can edit files  
                                                
  Press enter to confirm or esc to go back
