tui-components/tests/snapshots/selection_snapshots__selection_list_empty.snap
---
source: tests/selection_snapshots.rs
expression: output
---
                                                
  Empty List                                    
                                                
no matches                                      
                                                
  Press enter to confirm or esc to go back
