tui-components/tests/snapshots/selection_snapshots__selection_list_with_search.snap
---
source: tests/selection_snapshots.rs
expression: output
---
                                                
  Select Approval Mode                          
                                                
  Type to search...                             
› Read Only (current)  Codex can read files     
  Full Access          Codex can edit files     
                                                
  Press enter to confirm or esc to go back
