tui-components/tests/snapshots/selection_snapshots__selection_list_with_subtitle.snap
---
source: tests/selection_snapshots.rs
expression: output
---
                                                
  Select Approval Mode                          
  Switch between Codex approval presets         
                                                
› 1. Read Only (current)  Codex can read files  
  2. Full Access          Codex can edit files  
                                                
  Press enter to confirm or esc to go back
