tui-components/tests/snapshots/selection_snapshots__selection_row_long_label_wraps.snap
---
source: tests/selection_snapshots.rs
expression: output
---
  1. This is a very long option label
