tui-components/tests/snapshots/selection_snapshots__selection_row_unicode_content.snap
---
source: tests/selection_snapshots.rs
expression: output
---
: 1. Option with emoji 🚀  and unicode ✓
